@@ -1,5 +1,12 @@
 2012-12-22 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/stm8/gen.c,
+	  src/stm8/ralloc.h,
+	  src/stm8/ralloc2.cc:
+	  Infrastructure for STM8 port.
+
+2012-12-22 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/stm8/main.c,
 	  src/stm8/gen.c,
 	  src/stm8/gen.h,
